<resources>
    <string name="app_name">GoShoes</string>
    <string name="key_product_code">productCode</string>
    <string name="sub_total">SubTotal</string>
    <string name="shipping">Shipping</string>
    <string name="free">Free</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="filter">Filter</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="btn_increase">Increase</string>
    <string name="btn_decrease">Decrease</string>
    <string name="app_logo">App logo</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="cart">Cart</string>
    <string name="user_info_shared_preference">CurrentUserInfo</string>

    <string name="key_email">email</string>
    <string name="key_first_name">firstname</string>

    <string name="brand">Brand</string>
    <string name="color">Color</string>
    <string name="style">Style</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="reset_filter">Reset Filter</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_into_your_account_below">Sign into your account below.</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="my_details">My Details</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="create_account">Create Account</string>
    <string name="your_cart_is_currently_empty">Your cart is currently empty</string>
    <string name="estimated_gst_hst">Estimated GST/HST</string>
    <string name="estimated_pst_rst_qst">Estimated PST/RST/QST</string>
    <string name="order_total">Order Total</string>
    <string name="select_a_size">Select a size:</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="reviews">Reviews</string>
    <string name="write_a_review">Write a Review</string>
    <string name="share_your_thoughts">Share your thoughts</string>
    <string name="overall_rating">Overall Rating</string>
    <string name="review_title">Review title</string>
    <string name="your_review">Your Review</string>
    <string name="submit_review">Submit Review</string>

</resources>
