<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activity_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/actionbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="NotSibling"
            android:layout_margin="5dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/sign_in_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:paddingBottom="20dp" />

            <TextView
                android:id="@+id/sign_in_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_into_your_account_below"
                android:textSize="14sp"
                android:textColor="#808080"
                android:layout_gravity="center"
                android:paddingBottom="10dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/sign_up_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center" />

                <Button
                    android:id="@+id/signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:backgroundTint="@color/black"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:textColorHint="@color/hint_text_color"
                android:textSize="15sp"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:background="@drawable/rounded_edit_text"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/hint_text_color"
                android:textSize="15sp"
                android:inputType="textPassword"
                android:padding="10dp"
                android:background="@drawable/rounded_edit_text"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp" />
            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:padding="10dp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"/>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>