<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imgThumb"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/thumbnail"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/txtSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginStart="10dp">

        <ImageButton
            android:id="@+id/btnIncrease"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/btn_increase"
            android:src="@drawable/plus"
            android:scaleType="centerCrop"
            android:padding="7dp"
            android:background="@drawable/btn_border_cart" />

        <TextView
            android:id="@+id/txtQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <ImageButton
            android:id="@+id/btnDecrease"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/btn_decrease"
            android:src="@drawable/minus"
            android:scaleType="centerCrop"
            android:padding="7dp"
            android:background="@drawable/btn_border_cart"/>
    </LinearLayout>



</LinearLayout>