<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.CartActivity"
    android:background="@color/activity_background">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:verticalSpacing="5dp"
                android:padding="5dp"
                android:gravity="center"
                android:stretchMode="columnWidth"
                android:background="@color/white"
                android:layout_margin="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:gravity="center"
                android:background="@color/white"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/sub_total"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/txtCartTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line_divide_background"
                    android:layout_margin="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/shipping"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/txtShipping"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/free"
                        android:gravity="end"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line_divide_background"
                    android:layout_margin="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/txtTotalPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkout"
                android:backgroundTint="@color/black"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>