<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="@color/black"
    style="@style/NoPaddingToolbar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_logo"
            android:scaleType="centerInside"
            android:src="@drawable/app_logo_b"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center|end">

            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/imgCart"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@color/black"
                    android:contentDescription="@string/cart"
                    android:scaleType="fitCenter"
                    android:src="@drawable/cart"
                    app:tint="@color/white"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/txtCartBadge"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="top|end"
                    android:background="@drawable/badge_background"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_marginTop="12dp"/>

            </FrameLayout>


            <ImageButton
                android:id="@+id/imgLogin"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/black"
                android:contentDescription="@string/login"
                android:scaleType="fitCenter"
                android:src="@drawable/account"
                app:tint="@color/white"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:gravity="bottom"
                android:layout_marginBottom="12dp"
                android:textSize="15sp"/>
            
            <View
                android:layout_width="10dp"
                android:layout_height="match_parent"/>

        </LinearLayout>
    </LinearLayout>
</androidx.appcompat.widget.Toolbar>
