<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailedInfoActivity"
    android:orientation="vertical"
    android:background="@color/activity_background">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="400dp" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:tabGravity="center"
                app:tabIndicatorHeight="0dp"
                android:background="@android:color/transparent" />

            <TextView
                android:id="@+id/txtProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/txtProductPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_a_size"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"/>

            <GridLayout
                android:id="@+id/sizeButtonGrid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:columnCount="5"
                android:layout_marginTop="10dp" />

            <Button
                android:id="@+id/btnCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/hint_text_color"
                android:enabled="false"
                android:text="@string/add_to_cart"
                android:textColorLink="@color/white"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp"/>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_divide_background"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="10dp"/>

            <LinearLayout
                android:id="@+id/layoutReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtReviewTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/reviews"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="center|end">

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/transparent"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:progressTint="@color/ratingbar"
                        android:secondaryProgressTint="@color/transparent"
                        android:stepSize="0.1"
                        android:layout_marginEnd="5dp"/>

                    <TextView
                        android:id="@+id/txtStarRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_marginEnd="10dp"/>

                    <ImageButton
                        android:id="@+id/btnToggle"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:contentDescription="Toggle Reviews"
                        android:scaleType="fitCenter"
                        android:src="@drawable/download"
                        app:tint="@color/black"
                        android:background="@color/white"
                        android:layout_marginRight="10dp"
                        android:clickable="false"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:visibility="invisible"
                android:text="@string/write_a_review"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:verticalSpacing="5dp"
                android:padding="5dp"
                android:gravity="center"
                android:stretchMode="columnWidth"
                android:background="@color/white"
                android:layout_margin="10dp" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>